@@ -35,7 +35,7 @@ Main features
    * Sound Engine support (CocosDenshion library)
    * Integrated Pause/Resume
    * Integrated Slow motion/Fast forward
-   * Fast textures: PVRTC 2-bit & 4-bit textures, RGBA 16-bit (and 32-bit) textures
+   * Fast textures: PVR compressed and uncompressed textures
    * Point based: iPhone4 + RetinaDisplay mode compatible
    * Language: objective-c
    * Open Source: Compatible with open and closed source projects
