@@ -117,9 +117,9 @@ static CCTextureCache *sharedTextureCache;
 -(id) init
 {
 	if( (self=[super init]) ) {
-		textures = [[NSMutableDictionary dictionaryWithCapacity: 10] retain];
-		dictLock = [[NSLock alloc] init];
-		contextLock = [[NSLock alloc] init];
+		textures_ = [[NSMutableDictionary dictionaryWithCapacity: 10] retain];
+		dictLock_ = [[NSLock alloc] init];
+		contextLock_ = [[NSLock alloc] init];
 	}
 
 	return self;
@@ -127,16 +127,16 @@ static CCTextureCache *sharedTextureCache;
 
 - (NSString*) description
 {
-	return [NSString stringWithFormat:@"<%@ = %08X | num of textures =  %i>", [self class], self, [textures count]];
+	return [NSString stringWithFormat:@"<%@ = %08X | num of textures =  %i>", [self class], self, [textures_ count]];
 }
 
 -(void) dealloc
 {
 	CCLOG(@"cocos2d: deallocing %@", self);
 
-	[textures release];
-	[dictLock release];
-	[contextLock release];
+	[textures_ release];
+	[dictLock_ release];
+	[contextLock_ release];
 	[auxGLcontext release];
 	auxGLcontext = nil;
 	sharedTextureCache = nil;
@@ -153,7 +153,7 @@ static CCTextureCache *sharedTextureCache;
 	// textures will be created on the main OpenGL context
 	// it seems that in SDK 2.2.x there can't be 2 threads creating textures at the same time
 	// the lock is used for this purpose: issue #472
-	[contextLock lock];
+	[contextLock_ lock];
 	if( auxGLcontext == nil ) {
 		auxGLcontext = [[EAGLContext alloc]
 							   initWithAPI:kEAGLRenderingAPIOpenGLES1
@@ -175,13 +175,13 @@ static CCTextureCache *sharedTextureCache;
 	} else {
 		CCLOG(@"cocos2d: TetureCache: EAGLContext error");
 	}
-	[contextLock unlock];
+	[contextLock_ unlock];
 	
 	[autoreleasepool release];
 
 #elif defined(__MAC_OS_X_VERSION_MAX_ALLOWED)
 
-	[contextLock lock];
+	[contextLock_ lock];
 	if( auxGLcontext == nil ) {
 
 		MacGLView *view = [[CCDirector sharedDirector] openGLView];
@@ -210,7 +210,7 @@ static CCTextureCache *sharedTextureCache;
 	
 	[NSOpenGLContext clearCurrentContext];
 
-	[contextLock unlock];
+	[contextLock_ unlock];
 	
 	[autoreleasepool release];
 	
@@ -225,7 +225,7 @@ static CCTextureCache *sharedTextureCache;
 	
 	CCTexture2D * tex;
 	
-	if( (tex=[textures objectForKey: filename] ) ) {
+	if( (tex=[textures_ objectForKey: filename] ) ) {
 		[target performSelector:selector withObject:tex];
 		return;
 	}
@@ -249,9 +249,9 @@ static CCTextureCache *sharedTextureCache;
 
 	// MUTEX:
 	// Needed since addImageAsync calls this method from a different thread
-	[dictLock lock];
+	[dictLock_ lock];
 	
-	tex=[textures objectForKey: path];
+	tex=[textures_ objectForKey: path];
 	
 	if( ! tex ) {
 		
@@ -279,7 +279,7 @@ static CCTextureCache *sharedTextureCache;
 			[jpg release];
 			
 			if( tex )
-				[textures setObject: tex forKey:path];
+				[textures_ setObject: tex forKey:path];
 			else
 				CCLOG(@"cocos2d: Couldn't add image:%@ in CCTextureCache", path);
 			
@@ -296,7 +296,7 @@ static CCTextureCache *sharedTextureCache;
 			[image release];
 			
 			if( tex )
-				[textures setObject: tex forKey:path];
+				[textures_ setObject: tex forKey:path];
 			else
 				CCLOG(@"cocos2d: Couldn't add image:%@ in CCTextureCache", path);
 			
@@ -316,7 +316,7 @@ static CCTextureCache *sharedTextureCache;
 			[image release];
 
 			if( tex )
-				[textures setObject: tex forKey:path];
+				[textures_ setObject: tex forKey:path];
 			else
 				CCLOG(@"cocos2d: Couldn't add image:%@ in CCTextureCache", path);
 			
@@ -326,7 +326,7 @@ static CCTextureCache *sharedTextureCache;
 
 	}
 	
-	[dictLock unlock];
+	[dictLock_ unlock];
 	
 	return tex;
 }
@@ -339,7 +339,7 @@ static CCTextureCache *sharedTextureCache;
 	CCTexture2D * tex = nil;
 	
 	// If key is nil, then create a new texture each time
-	if( key && (tex=[textures objectForKey: key] ) ) {
+	if( key && (tex=[textures_ objectForKey: key] ) ) {
 		return tex;
 	}
 	
@@ -354,7 +354,7 @@ static CCTextureCache *sharedTextureCache;
 #endif
 	
 	if(tex && key)
-		[textures setObject: tex forKey:key];
+		[textures_ setObject: tex forKey:key];
 	else
 		CCLOG(@"cocos2d: Couldn't add CGImage in CCTextureCache");
 	
@@ -365,17 +365,17 @@ static CCTextureCache *sharedTextureCache;
 
 -(void) removeAllTextures
 {
-	[textures removeAllObjects];
+	[textures_ removeAllObjects];
 }
 
 -(void) removeUnusedTextures
 {
-	NSArray *keys = [textures allKeys];
+	NSArray *keys = [textures_ allKeys];
 	for( id key in keys ) {
-		id value = [textures objectForKey:key];		
+		id value = [textures_ objectForKey:key];		
 		if( [value retainCount] == 1 ) {
 			CCLOG(@"cocos2d: CCTextureCache: removing unused texture: %@", key);
-			[textures removeObjectForKey:key];
+			[textures_ removeObjectForKey:key];
 		}
 	}
 }
@@ -385,10 +385,10 @@ static CCTextureCache *sharedTextureCache;
 	if( ! tex )
 		return;
 	
-	NSArray *keys = [textures allKeysForObject:tex];
+	NSArray *keys = [textures_ allKeysForObject:tex];
 	
 	for( NSUInteger i = 0; i < [keys count]; i++ )
-		[textures removeObjectForKey:[keys objectAtIndex:i]];
+		[textures_ removeObjectForKey:[keys objectAtIndex:i]];
 }
 
 -(void) removeTextureForKey:(NSString*)name
@@ -396,7 +396,13 @@ static CCTextureCache *sharedTextureCache;
 	if( ! name )
 		return;
 	
-	[textures removeObjectForKey:name];
+	[textures_ removeObjectForKey:name];
+}
+
+#pragma mark TextureCache - Get
+- (CCTexture2D *)textureForKey:(NSString *)key
+{
+    return [textures_ objectForKey:key];    
 }
 
 @end
@@ -412,7 +418,7 @@ static CCTextureCache *sharedTextureCache;
 	
 	CCTexture2D * tex;
 	
-	if( (tex=[textures objectForKey: path] ) ) {
+	if( (tex=[textures_ objectForKey: path] ) ) {
 		return tex;
 	}
 	
@@ -422,7 +428,7 @@ static CCTextureCache *sharedTextureCache;
 	NSData *nsdata = [[NSData alloc] initWithContentsOfFile:fullpath];
 	tex = [[CCTexture2D alloc] initWithPVRTCData:[nsdata bytes] level:0 bpp:bpp hasAlpha:alpha length:w];
 	if( tex )
-		[textures setObject: tex forKey:path];
+		[textures_ setObject: tex forKey:path];
 	else
 		CCLOG(@"cocos2d: Couldn't add PVRTCImage:%@ in CCTextureCache",path);
 	
@@ -438,7 +444,7 @@ static CCTextureCache *sharedTextureCache;
 	
 	CCTexture2D * tex;
 	
-	if( (tex=[textures objectForKey: fileimage] ) ) {
+	if( (tex=[textures_ objectForKey: fileimage] ) ) {
 		return tex;
 	}
 	
@@ -447,7 +453,7 @@ static CCTextureCache *sharedTextureCache;
 	
 	tex = [[CCTexture2D alloc] initWithPVRFile: fullpath];
 	if( tex )
-		[textures setObject: tex forKey:fileimage];
+		[textures_ setObject: tex forKey:fileimage];
 	else
 		CCLOG(@"cocos2d: Couldn't add PVRImage:%@ in CCTextureCache",fileimage);	
 	
